--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
   <modelVersion>4.0.0</modelVersion>
   <groupId>com.devonfw.tools</groupId>
   <artifactId>devon-docgen</artifactId>
-  <version>1.0.0</version>
+  <version>2.0.0</version>
   <packaging>pom</packaging>
   <name>${project.artifactId}</name>
   <description>Documentation generator that can generate a complete and self-contained documentation as PDF, ePub and HTML from Asciidoc wiki pages.</description>
@@ -17,7 +17,8 @@
     <docgen.asciidoc.source>${basedir}</docgen.asciidoc.source>
     <docgen.asciidoc.target>${basedir}/target/asciidoc/</docgen.asciidoc.target>
     <docgen.generated.docs>${basedir}/target/generated-docs/</docgen.generated.docs>
-
+    <buildtime>${maven.build.timestamp}</buildtime>
+    <maven.build.timestamp.format>yyyy-MM-dd_HH.mm.ss</maven.build.timestamp.format>
     <asciidoctor.maven.plugin.version>1.5.7.1</asciidoctor.maven.plugin.version>
     <asciidoctorj.pdf.version>1.5.0-alpha.16</asciidoctorj.pdf.version>
   </properties>
@@ -247,6 +248,9 @@
                           </scriptfilter>
                           <replaceregex pattern="^(=) (.*)" replace="[[${currentfilename}]]${line.separator}\1 \2" flags="g"/>
                           <replaceregex pattern="xref:([^#:]*)\[([^#:]*)\]" replace="&lt;&lt;${currentfilename}_\1,\2>>" flags="g"/>
+                          <replaceregex pattern="\$\{project\.version\}" replace="${project.version}" flags="g"/>
+                          <replaceregex pattern="\$\{project\.artifactId\}" replace="${project.artifactId}" flags="g"/>
+                          <replaceregex pattern="\$\{buildtime\}" replace="${buildtime}" flags="g"/>
                         </tokenfilter>
                       </filterchain>
                     </copy>
