--- a/pom.xml
+++ b/pom.xml
@@ -397,7 +397,7 @@
                   <goal>process-asciidoc</goal>
                 </goals>
                 <configuration>
-                  <sourceDocumentName>${oasp.wiki.page}.asciidoc</sourceDocumentName>
+                  <sourceDocumentName>${docgen.wiki.page}.asciidoc</sourceDocumentName>
                   <backend>pdf</backend>
                   <sourceHighlighter>coderay</sourceHighlighter>
                   <attributes>
